--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,8 +20,8 @@ security:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
             form_login:
-                login_path: login
-                check_path: login
+                login_path: /login
+                check_path: /login
             logout:
                 path: app.logout
                 # where to redirect after logout
@@ -37,5 +37,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/dashboard, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
